sonarr/sonarr-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: autopirate
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert -f kompose.yaml
    kompose.service.type: loadbalancer
    kompose.version: 1.28.0 (c4137012e)
    kompose.volume.storage-class-name: longhorn
  creationTimestamp: null
  labels:
    io.kompose.service: sonarr
  name: sonarr
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: sonarr
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert -f kompose.yaml
        kompose.service.type: loadbalancer
        kompose.version: 1.28.0 (c4137012e)
        kompose.volume.storage-class-name: longhorn
      creationTimestamp: null
      labels:
        io.kompose.network/home-ops-default: "true"
        io.kompose.service: sonarr
    spec:
      containers:
        - env:
            - name: PGID
              value: "1000"
            - name: PUID
              value: "1000"
            - name: TZ
              value: Etc/UTC
          image: lscr.io/linuxserver/sonarr:latest
          name: sonarr
          ports:
            - containerPort: 8989
          resources: {}
          volumeMounts:
            - mountPath: /config
              name: sonarr
            - mountPath: /tv
              name: tv
            - mountPath: /downloads
              name: downloads
      restartPolicy: Always
      volumes:
        - name: sonarr
          persistentVolumeClaim:
            claimName: sonarr
        - name: tv
          persistentVolumeClaim:
            claimName: tv
        - name: downloads
          persistentVolumeClaim:
            claimName: downloads
status: {}
