sonarr/sonarr-tcp-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: autopirate
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert -f kompose.yaml
    kompose.service.type: loadbalancer
    kompose.version: 1.28.0 (c4137012e)
    kompose.volume.storage-class-name: openebs-hostpath
  creationTimestamp: null
  labels:
    io.kompose.service: sonarr-tcp
  name: sonarr-tcp
spec:
  ports:
    - name: "8989"
      port: 8989
      targetPort: 8989
  selector:
    io.kompose.service: sonarr
  type: LoadBalancer
status:
  loadBalancer: {}
