sonarr/sonarr-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sonarr
  namespace: autopirate
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: sonarr.epricesx.duckdns.org
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: sonarr-tcp
            port:
              number: 8989
